--- a/BasicInformation/午前/1.テクノロジ系/4.システム構成要素.md
+++ b/BasicInformation/午前/1.テクノロジ系/4.システム構成要素.md
@@ -9,11 +9,10 @@
 3層クライアントサーバシステムでは、ユーザの入出力を担当する「プレゼンテーション層」、業務処理に依存するデータ加工を行う「ファンクション層」、
 データベース処理を行う「データ層」の3層に分離したモデルです。
 
-一般にWeb3層クライアントシステムは、
-・プレゼンテーション層＝Webブラウザ
-・ファンクション層＝Webサーバ
-・データ層＝DBMSとデータベース
-の組合せで構成され、それぞれの層に伝達しながら処理が行われます。
+**・プレゼンテーション層**＝Webブラウザ
+**・ファンクション層**＝Webサーバ
+**・データ層**＝DBMSとデータベース
+一般にWeb3層クライアントシステムは、上記3つの組合せで構成され、それぞれの層に伝達しながら処理が行われます。
 ブラウザは利用者の入力をサーバに送信する(HTTP要求)。
 WebサーバではHTTP要求を処理し、データの読み書きをデータベース(DBMS)に要求する。
 DBMSはデータベースにアクセスし、結果をWebサーバに返す。
@@ -21,31 +20,52 @@ WebサーバではDBMSから得られた結果に応じてHTMLページを構成
 ブラウザはWebサーバからのHTTP応答を解釈し、結果を画面に出力する。
 
 
-**RAID**
 
-・RAID0(ストライピング)
+サーバの処理能力を向上させる施策には「スケールアップ」と「スケールアウト」という2つのアプローチに大別されます。
+
+**スケールアップ**
+サーバを構成する各処理装置をより性能の高いものに交換したり、プロセッサの数などを増やすことでサーバ当たりの処理能力を向上させる。
+追加・削除・更新処理が頻繁に発生するなど、並列実行による負荷分散が困難なシステムに適している。
+
+**スケールアウト**
+接続されるサーバの台数を増やすことでサーバシステム全体としての処理能力や可用性を向上させる。同等の性能アップであればスケールアップよりも低コストであることが多い。
+
+更新処理(追加と削除も含む)を伴う機能を複数のサーバに負荷分散すると、整合性維持のための処理や排他制御による遅延が生じ、効果的な性能向上に繋がりません。
+このため更新処理がメインのシステムにはスケールアウトは不向きです。
+スケールアウトが適するのは、更新処理の整合性要件が緩い、かつ、個々に独立し並列実行が可能な処理を扱うシステムです。
+
+
+
+**RAID(Redundant Arrays of Independent Disks)**
+複数台の磁気ディスクを組み合わせ、仮想的な1台の記憶装置として運用することで、全体として高い性能を得る技術です。
+RAIDには0～5のレベルがありますが、その区別は本来のデータとエラー訂正用のデータ（ハミング符号・パリティビット）を、どのように書き込むかによって定義されています。
+
+**RAID0(ストライピング)**
 複数のディスクに分散してデータを書き込むことで、アクセス性能を向上させる。
 
-・RAID1(ミラーリング)
+**RAID1(ミラーリング)**
 同じデータを2台のディスクに書き込むことで、信頼性を向上させる。実質記憶容量は50%となるので記憶効率は悪い。
 
-・RAID2
+**RAID2**
+複数の磁気ディスクに分散してビット単位でデータを書き込み，さらに，複数の磁気ディスクにエラー訂正符号(ECC)を書き込む。
 データにエラー訂正用のハミング符号を付加したものをストライピングで書き込む。
 
-・RAID3
+**RAID3**
+複数の磁気ディスクに分散してバイト単位でデータを書き込み，さらに，1台の磁気ディスクにパリティを書き込む。
 データのエラー訂正用にパリティビットを使用し、一つのディスクをエラー訂正符号の書き込み専用とする。
 
-・RAID4
+**RAID4**
 RAID3とほぼ同じ。RAID3でビット/バイト単位だったストライピングをブロック単位で行う。
 
-・RAID5
+**RAID5**
 情報データとともにパリティビットも各ディスクに分散して書き込む方式。信頼性、アクセス性能が共に高まる。
 
 ストライピング単位
-      単位     構成
-RAID3 ビット   固定
-RAID4 ブロック 固定
-RAID5 ブロック 分散
+      読書単位  誤り訂正方式   誤り訂正符号格納場所
+RAID2 ビット    ハミング符号   1台のディスク
+RAID3 ﾋﾞｯﾄ/ﾊﾞｲﾄ パリティビット 1台のディスク
+RAID4 ブロック  パリティビット 1台のディスク
+RAID5 ブロック  パリティビット 複数台に分散
 
 ストライピングという言葉に意味はなく、単純にRAID0の別名みたいだ。
 RAID0がストライピングであり、ストライピングといったらRAID0の関係らしい。
@@ -53,7 +73,6 @@ RAID0がストライピングであり、ストライピングといったらRAI
 これは両手にペンを持って10までの数字を右のノートは偶数、左のノートには奇数を書くイメージをいいかも？
 両方に同時に書き込むので、1から順番に1冊のノートに書きこむよりも早く書き込める。
 正し、どちらか一方が死んだ途端、意味をなさなくなるので信頼性は低いというわけだ。
-
 
 **ストライピング**
 データを細分化して複数台の磁気ディスクに格納すること。
@@ -66,6 +85,22 @@ RAID0がストライピングであり、ストライピングといったらRAI
 ブロック化は、複数のレコードを一定数ごとにまとめることです。1レコードごと読み書きするよりも、ブロック単位でアクセスすることで処理効率を向上させます。
 
 
+**デュアルシステム**
+信頼化設計の1つで、同じ処理を2組のコンピュータシステムで行い、その結果を照合機でチェックしながら処理を進行していくシステム構成です。
+一方の系統に障害が発生した場合には、問題のある側のシステムをメイン処理から切り離し、残された側のシステムのみで処理を続行しつつ、障害からの回復を図ります。
+
+「結果の照合」という語句がデュアルシステムのキーワードになります。
+
+**負荷分散システム**
+2系統のシステムの負荷が均等になるように，処理を分散する方式である。
+
+**並列処理システム**
+2系統のシステムで並列処理をすることによって性能を上げる方式である。
+
+**デュプレックスシステム**
+現用系と待機系の2系統のシステムで構成され，現用系に障害が生じたときに，待機系が処理を受け継ぐ方式である。
+
+
 
 **ストアドプロシージャ**
 データベースに対する一連の処理をまとめた手続きにして、データベース管理システムに保存したものです。
@@ -73,6 +108,77 @@ RAID0がストライピングであり、ストライピングといったらRAI
 
 クライアントからサーバに対してのストアドプロシージャ1回の要求で、データベースに複数のクエリを発行することができるので、クライアントから直に同数のクエリを発行する場合と比較して、クライアント－サーバ間のネットワーク負荷の軽減が期待できます。
 
+
+
+**クラウドサービス**
+提供されるサービスによってSaaS、PaaS、IaaSに大別されます。
+
+**SaaS (Software as a Service)**
+サービス提供事業者はアプリケーション以下を提供する。利用者は機能を使い、アプリケーションにおける設定可能範囲内でカスタマイズが可能。
+
+**PaaS (Platform as a Service)**
+サービス提供事業者は開発環境などのミドルウェア以下を提供する。利用者は用意したアプリケーションをミドルウェア上で稼働させる。
+ミドルウェアにおける設定(カスタマイズ)が可能。
+アプリケーション開発／動作のための基盤がサービスの形で提供されます。OSおよび提供されるプラットフォームの保守はサービス提供者側で行われます。
+
+**IaaS (Infrastructure as a Service)**
+1.サービス提供事業者はOS以下を提供する。利用者はミドルウェア以上を自前で用意し、OSにおける設定(カスタマイズ)が可能。
+2.サービス提供事業者はハードウェアおよびネットワークを提供する。利用者はOS以上を用意する。
+
+
+
+負荷分散クラスタとHA(高可用性)クラスタは次の特徴をもつシステム構成です。
+
+**負荷分散クラスタ構成**
+処理を複数のサーバに分散することで、各サーバに掛かる負荷を低減させることを目的としたクラスタ構成。高い処理能力が求められるシステムでよく利用される　。
+
+**HAクラスタ構成**
+障害発生時も正常時と同様の処理を継続することを目的としたシステム。信頼性が要求されるシステムでよく利用される。
+
+**ホットスタンバイ形式**
+待機系サーバとして同一仕様のサーバが必要になるが，障害発生時には待機系サーバに処理を引き継ぐので，障害が発生してもスループットを維持することができる。
+
+**負荷分散構成**
+稼働している複数のサーバ間で処理の整合性を取らなければならないので，データベースを共有する必要がある。
+ホットスタンバイ方式では両方のシステムが同時稼働しないため、処理の整合性をとる必要はありません。
+
+処理を均等にサーバに分散できるので，サーバマシンが有効に活用でき，将来の処理量の増大に対して拡張性が確保できる。
+ホットスタンバイ方式では予備系に処理を分散しません。
+
+障害が発生すると稼働中の他のサーバに処理を分散させるので，稼働中のサーバの負荷が高くなり，スループットが低下する。
+ホットスタンバイ方式では同等の性能をもつ予備系が処理を引き継ぐため処理性能は低下しません。
+
+
+
+仮想化マシン環境を物理マシン20台で運用しているシステムがある。次の運用条件のとき，物理マシンが最低何台停止すると縮退運転になるか。
+
+〔運用条件〕
+物理マシンが停止すると，そこで稼働していた仮想マシンは他の全ての物理マシンで均等に稼働させ，使用していた資源も同様に配分する。
+物理マシンが20台のときに使用する資源は，全ての物理マシンにおいて70%である。
+1台の物理マシンで使用している資源が90%を超えた場合，システム全体が縮退運転となる。
+(1)～(3)以外の条件は考慮しなくてよい。
+
+→
+
+20台の物理マシン上でそれぞれ70%の資源が使用されているので、システムが稼働するために必要となる総資源量は、
+
+　20台×70%＝1,400(%)
+
+物理マシン1台の資源量を基準とすると1,400%(物理マシン14台分の資源)になります。x台の物理マシンが停止したとき、この資源量は残りの物理マシン数「20－x台」に均等に割り振られることになるので、各マシンの資源使用率を90%以下にするには、
+
+　1,400÷(20－x)≦90
+　1,400≦90(20－x)
+　1,400≦1,800－90x
+　90x≦400
+　x≦4.444…(台)
+
+最大で4台までの停止が許容できることになります。したがって物理マシンの資源使用率が90%を超え、縮退運転に移行するのは停止台数が5台になった時点です。
+
+→
+
+朝はわからなかったのに、夜になって見返して見たらすんなりわかった。
+20台で70%なら全部で1400%の仕事をしている。それをx台で割ったとき0.9になればいいんだから～ってのが発想だ。
+若干違ってはいるが、それっぽい回答になったのでまぁ、いいだろう。
 
 ---
 
@@ -90,12 +196,33 @@ RAID0がストライピングであり、ストライピングといったらRAI
 「スプーリングはスループットを向上させる。」は、情報処理技術者試験の各区分で繰り返し出題されている定番中の定番問題です。覚えておきましょう。
 
 
+**キャパシティプランニング**
+情報システムの設計段階において、現状の最大負荷だけでなく将来予測される最大負荷時にもサービスの水準を維持できるような設計を検討することです。
+検討は、CPUの性能や回線の速度などに加えて経済性や拡張性も対象になります。キャパシティプランニングを行うことで適切なハードウェアを選定し、最適な投資ができます。
+
+キャパシティプランニングの実施は一般に次の手順で行います。
+1.現状処理能力の把握 : 現行システムをモニタリングし現状の処理能力を把握する
+2.将来予測 : 将来的に予測される端末の増加、利用者数の増加などを分析する
+3.増設の検討 : 2.の分析結果からシステム能力の限界時期を予測する
+4.作成した案の評価・見直し : 新たなシステム構成で実現すべき性能要件から必要なハードウェア増設を検討する
+
+
 
 **MTBF(Mean Time Between Failure)**
 平均故障間隔。故障が回復してから次に故障するまでの平均時間のこと。
 
 **MTTR(Mean Time To Repair)**
 平均修復時間。故障が発生したときに復旧に要する平均時間のこと。
+
+
+
+
+**稼働率の計算**
+稼働率を R とすると「少なくともいずれか一方が正常に動作すればよいときの稼働率」 = 並列接続
+$1-(1-R)^2$
+
+「2台とも正常に動作しなければならないときの稼働率」 = 直接接続
+$R^2$
 
 
 **M/M/1の待ち行列モデル**
@@ -135,6 +262,22 @@ $ρ/1-ρ * 平均サービス時間 + 平均サービス時間$
 
 ---
 
+## システムの評価指標 計算系
+
+平成30年秋期　問15
+東京と福岡を結ぶ実線の回線がある。東京と福岡の間の信頼性を向上させるために，大阪を経由する破線の迂回回線を追加した。迂回回線追加後における，東京と福岡の間の稼働率は幾らか。ここで，回線の稼働率は，東京と福岡，東京と大阪，大阪と福岡の全てが0.9とする。
+→
+まず通常の回線と迂回回線それぞれの稼働率を求めます。
+東京－福岡の回線稼働率は、0.9
+東京－大阪－福岡の回線稼働率は、0.9×0.9＝0.81
+迂回回線追加後は、上記のどちらかが稼働していればよいので並列構成と考えて計算します。
+
+　1－(1－0.9)(1－0.81)
+＝1－0.1×0.19
+＝1－0.019＝0.981
+
+---
+
 ## 1回目に間違えた問題
 
 平成29年春期　問13
@@ -146,3 +289,24 @@ $ρ/1-ρ * 平均サービス時間 + 平均サービス時間$
 そうですよね。使用目的に合わせたプログラムで計測するものですよね。
 でも、監視・計測用のプログラムって文言も紛らわしくて仕方がないのだが。
 あー、でもシステムの稼働状態や資源の状況ってあるので、テストする主体が違いますね。
+
+
+
+平成31年春期　問13
+冗長構成におけるデュアルシステムの説明として，適切なものはどれか。
+
+→
+
+2つシステムがあることは前提として、どのように動くシステムなのか。
+メインとサブがあって、メインに障害が発生したらサブが処理を引き継ぐって見えたので速攻で選んだら終わった。
+正解は2つのシステムが同時に動いて、整合性を取りながら動くシステムらしい。
+文章おかしいけど勘弁して。
+
+
+
+平成28年秋期　問14
+ロードバランサを使用した負荷分散クラスタ構成と比較した場合の，ホットスタンバイ形式によるHA(High Availability)クラスタ構成の特徴はどれか。
+
+→
+
+待機系を用意。処理を引き継ぐ。
