8月27日朝の分

--- a/BasicInformation/午前/1.テクノロジ系/4.システム構成要素.md
+++ b/BasicInformation/午前/1.テクノロジ系/4.システム構成要素.md
@@ -19,6 +19,20 @@ DBMSはデータベースにアクセスし、結果をWebサーバに返す。
 WebサーバではDBMSから得られた結果に応じてHTMLページを構成し、付加情報とともにクライアントに返信する(HTTP応答)。
 ブラウザはWebサーバからのHTTP応答を解釈し、結果を画面に出力する。
 
+**Webサーバ**
+ブラウザとDBサーバの間にたち、ブラウザから受け取ったリクエストを基に組み立てたSQL文でDBサーバに問合せを行い、
+DBから返された結果をHTML文書に加工してブラウザに返す役割をもっています。
+HTTPリクエストを解釈し、Webブラウザに結果を返す。動的な処理の場合、APサーバに処理を依頼する。
+
+**APサーバ**
+Webサーバから受け付けたリクエストをプログラムで処理し、結果をWebサーバに返す。
+
+**WebサーバーとAPサーバーで処理を分担する目的**
+負荷軽減が目的。
+負荷が軽い静的コンテンツへのリクエストはWebサーバで処理し，負荷が重い動的コンテンツへのリクエストはAPサーバで処理するように，
+クライアントからのリクエストの種類に応じて処理を分担できるため。
+静的コンテンツ(静的HTMLや画像など)はWebサーバ、動的コンテンツ(CGIプログラムなど)はAPサーバ、
+というように別々の物理サーバで処理されることになるので、同一の物理サーバに配置するよりも処理負荷の低減を期待できます。
 
 
 サーバの処理能力を向上させる施策には「スケールアップ」と「スケールアウト」という2つのアプローチに大別されます。
@@ -33,6 +47,28 @@ WebサーバではDBMSから得られた結果に応じてHTMLページを構成
 更新処理(追加と削除も含む)を伴う機能を複数のサーバに負荷分散すると、整合性維持のための処理や排他制御による遅延が生じ、効果的な性能向上に繋がりません。
 このため更新処理がメインのシステムにはスケールアウトは不向きです。
 スケールアウトが適するのは、更新処理の整合性要件が緩い、かつ、個々に独立し並列実行が可能な処理を扱うシステムです。
+
+
+
+**フールプルーフ(fool proof)**
+利用者が誤った操作をしても，システムに異常が起こらないようにする。
+不特定多数の人が操作するシステムに、入力データのチェックやエラーメッセージの表示などの機能を加えることで、人為的ミスによるシステムの誤動作を防ぐように設計する考え方です。
+
+**フェールソフト**
+縮退運転。
+装置が故障したときは，利用できる機能を制限したり，処理能力を低下させたりしても，システムは稼働させる。
+
+**フェールセーフ**
+装置が故障したときは，システムが安全に停止するようにして，被害を最小限に抑える。
+信号を全て赤にする。
+
+**フォールトトレラント**
+装置が故障しても，システム全体の機能に影響がないように，二重化などの冗長な構成とする。
+フォルト（英: fault）：短所や欠陥のこと。
+トレラント：「寛容（耐性のある）」という意味です。
+
+**フォールトアボイダンス**
+品質の高い製品を使うようにして、そもそも故障が起こらないようにする。
 
 
 
@@ -99,6 +135,19 @@ RAID0がストライピングであり、ストライピングといったらRAI
 
 **デュプレックスシステム**
 現用系と待機系の2系統のシステムで構成され，現用系に障害が生じたときに，待機系が処理を受け継ぐ方式である。
+現用（本番）系と待機（予備）系の2系統で構成されるデュプレックスシステムは、待機系の待機状態と、障害発生時のシステム切替えに要する時間を基準にして3つに分類できます。
+
+**ホットスタンバイ**
+現用（本番）系と同様のシステムを最初から起動しておく方式。障害発生時には自動的に処理を引き継ぎ、業務を継続する。3つの中では切替えに要する時間が最も短い。
+「あらかじめ起動して待機」という文言があれば、ホットスタンバイが当てはまる。
+
+**ウォームスタンバイ**
+コンピュータの電源を入れ OS を立ち上げておくが、業務システムは起動させない状態で待機させておく方式。
+待機時には主系のデータベースとの同期だけを行い、障害が発生してから待機系のデータベースシステムに切り替えて処理を引き継ぐ。
+
+**コールドスタンバイ**
+待機時には予備系で別の処理を行わせておく方式、または予備系の電源を切った状態で待機させておく方式。
+障害発生時はシステムを再起動し、業務システムを立ち上げて処理の引継ぎを行う。3つの中では切替えに要する時間が最も長い。
 
 
 
@@ -214,7 +263,12 @@ RAID0がストライピングであり、ストライピングといったらRAI
 **MTTR(Mean Time To Repair)**
 平均修復時間。故障が発生したときに復旧に要する平均時間のこと。
 
+**稼働率の公式**
+$稼働率 = MTBF / MTBF + MTTR$
 
+→
+故障していない時間 + 故障している時間 = 全ての稼働時間
+全ての稼働時間で故障していない時間を割れば、稼働率になる。って理屈だと思うよ。
 
 
 **稼働率の計算**
@@ -238,6 +292,14 @@ $ρ/1-ρ * 平均サービス時間 + 平均サービス時間$
 0.7 のとき　3.33…
 0.9 のとき　10.00
 と、利用率が上がるにつれて加速度的に平均応答時間が増加していくことがわかります。
+
+
+**フラグメンテーション**
+主記憶やハードディスクのような記憶装置において不連続な未使用領域が生じる現象、またはその生じた領域のことです。
+ディスク式の記憶装置でファイルの生成と削除を繰り返していると、記憶領域内に連続した未使用領域が少なくなっていき、ひとつのデータが飛び飛びの領域に記録されていきます。
+断片化されたファイルを読書きするには、ディスクヘッドを通常より多く動かす必要があるため、非効率的なI/O操作が増加してレスポンスが低下してしまいます。
+フラグメンテーションが発生しているか否かを判断するには、ツールなどを用いてディスクの格納状況を調査し、断片化率の確認を行います。
+
 
 
 **ベンチマークテスト**
@@ -284,7 +346,6 @@ $ρ/1-ρ * 平均サービス時間 + 平均サービス時間$
 ベンチマークテストの説明として，適切なものはどれか。
 
 →
-
 いきなり間違えました。
 そうですよね。使用目的に合わせたプログラムで計測するものですよね。
 でも、監視・計測用のプログラムって文言も紛らわしくて仕方がないのだが。
@@ -296,7 +357,6 @@ $ρ/1-ρ * 平均サービス時間 + 平均サービス時間$
 冗長構成におけるデュアルシステムの説明として，適切なものはどれか。
 
 →
-
 2つシステムがあることは前提として、どのように動くシステムなのか。
 メインとサブがあって、メインに障害が発生したらサブが処理を引き継ぐって見えたので速攻で選んだら終わった。
 正解は2つのシステムが同時に動いて、整合性を取りながら動くシステムらしい。
@@ -308,5 +368,17 @@ $ρ/1-ρ * 平均サービス時間 + 平均サービス時間$
 ロードバランサを使用した負荷分散クラスタ構成と比較した場合の，ホットスタンバイ形式によるHA(High Availability)クラスタ構成の特徴はどれか。
 
 →
-
 待機系を用意。処理を引き継ぐ。
+
+
+
+平成31年春期　問15
+アプリケーションの変更をしていないにもかかわらず，サーバのデータベース応答性能が悪化してきたので，表のような想定原因と，特定するための調査項目を検討した。調査項目cとして，適切なものはどれか。
+
+→
+データベースバッファの容量不足、フラグメンテーションによるディスクI/Oの増加。
+キャッシュメモリのヒット率の調査、データの格納状況の確認。
+どちらがどっち？
+パッと見どちらにも言えそうな気がしたので間違った。
+あ、バッファーって書いてある。ってことはキャッシュメモリとメインメモリとの緩衝材って事なので、それしかないですね。
+データベースの容量不足って見間違えたかな!!!
