--- a/BasicInformation/午前/1.テクノロジ系/3.コンピューター構成要素.md
+++ b/BasicInformation/午前/1.テクノロジ系/3.コンピューター構成要素.md
@@ -2,4 +2,28 @@
 
 ---
 
+## メモリ
+
+**ライトスルー方式(write through)**
+CPUから書き込む命令が出たときにキャッシュメモリと同時に主記憶にも書き込む方式。データの整合性は得られるが処理速度は低下する。
+キャッシュミスが発生すると、キャッシュ内の必要のないデータを主記憶に移動し、要求されたデータを主記憶からキャッシュにコピーします。
+→常に主記憶とキャッシュの内容が一致するため一貫性の確保は容易だが、主記憶への書き込みが頻繁に行われるので遅い
+
+**ライトバック方式(write back)**
+CPUから書き込む命令が出たときにキャッシュメモリだけに書き込む方式。主記憶への書き込みはキャッシュメモリからデータが追い出されるときに行われる。
+該当データがキャッシュから追い出されたタイミングで主記憶に書き出すので、一貫性を保つために書き戻し処理が必要となります。
+→主記憶とキャッシュの内容が一致しないため一貫性を保つための制御が複雑になるが、主記憶への書き込み回数が少ないため速い
+
+---
+
 ## 1回目に間違えた問題
+
+平成29年春期　問9
+キャッシュの書込み方式には，ライトスルー方式とライトバック方式がある。ライトバック方式を使用する目的として，適切なものはどれか。
+
+→
+おいおいって感じ。
+ライトスルーはそのままメモリーに書き込むってのは覚えてた。
+ライトバックがあいまいだったので今回で覚えましょう。
+あれこれ考えてくれるので、メモリの書き込み頻度を減らすことができるのがライトバックです。
+エラー起こったときに書き戻しもしてくれますよ。
