--- a/BasicInformation/午前/1.テクノロジ系/1.基礎理論.md
+++ b/BasicInformation/午前/1.テクノロジ系/1.基礎理論.md
@@ -3,30 +3,64 @@
 ---
 
 
-**n個の物からr個を選ぶ組み合わせ**  
+
+指数と対数は根本的には同じもので、何を求めるかによって呼び方が変わります。
+
+指数
+a のべき乗「a^p=M」の答え M を求めるときの p の部分。
+
+対数 log
+その指数 p を求めるための道具。
+log_aM は「a を底とする M の対数」と呼ぶ。
+
+M = a^p
+p = log_aM
+
+M:真数
+a:低
+p:指数
+
+
+
+## n個の物からr個を選ぶ組み合わせ
 $nCr = n! / (n-r)!r!$
 $10C2 = 10*9 / 2*1 = 45$
 
 
-## 丸め誤差、打ち切り誤差、情報落ち、桁落ち
 
+## SI単位系
+10^15 : ペタ
+10^12 : テラ
+10^9 : ギガ
+10^6 : メガ
+10^3 : キロ
+0
+10^-1 : デシ
+10^-2 : センチ
+10^-3 : ミリ
+10^-6 : マイクロ
+10^-9 : ナノ
+10^-12 : ピコ
+
+---
+
+### 丸め誤差、打ち切り誤差、情報落ち、桁落ち
 <https://mathwords.net/marumegosa>  
 
-``` txt
-●丸め誤差
+#### 丸め誤差
 ある桁以降を無視することによって生じる誤差のことです。
 「0.1212121212 を 0.12 とみなして計算する」
 桁数が多い小数を、途中で四捨五入したり、切り捨て・切り上げする場合。
 
-●打ち切り誤差
+#### 打ち切り誤差
 無限級数のある項以降を無視することによって生じる誤差のことです。
 「1+12+14+18+… という無限級数を計算したいが、18 までで打ち切る」
 
-●情報落ち
+#### 情報落ち
 絶対値が大きく異なる数を足したり引いたりすることで、小さい方の情報が無視されてしまう現象のことです。
 「1.0000+0.0001 を計算したいが、有効数字５桁で計算すると計算結果が 1.0000 になってしまい、足し算の意味がない」
 
-●桁落ち
+#### 桁落ち
 近い数を引き算することで有効数字が少なくなる現象のことです。
 「1.2345−1.2344 を計算したいが、答えは 0.0001 になってしまい、有効数字が5桁から1桁に減少する」
 強引に有効数字5桁のように表すと、1.0000×10^−4 となりますが、小数点以下の4つの 0 は正しい保証が(意味が無い) 0 です。
