--- a/BasicInformation/午前/1.テクノロジ系/2.アルゴリズムとプログラミング.md
+++ b/BasicInformation/午前/1.テクノロジ系/2.アルゴリズムとプログラミング.md
@@ -247,6 +247,75 @@ Webサイトの構築においては、1998年5月にW3Cにより勧告された
 
 ---
 
+平成29年春期　問5
+流れ図は，シフト演算と加算の繰り返しによって，2進整数の乗算を行う手順を表したものである。この流れ図中のa，bの組合せとして，適切なものはどれか。ここで，乗数と被乗数は符号なしの16ビットで表される。X，Y，Zは32ビットのレジスタであり，けた送りは論理シフトを用いる。最下位ビットを第0ビットと記す。
+
+流れ図を見ると、被乗数がX、乗数がY、結果としてZを出力するので「X × Y ＝ Z」が成立すれば良いことがわかります。
+
+細かな説明がない流れ図の穴埋めでは論理的に答えを導くのは難しいので、XおよびYにトレースが簡単な数値を設定して、出力Zが適切な値かどうかで正しい組合せを探すのが確実な解法です。ここではX＝3，Y＝3を使います（16ビット表記だと「0000 0000 0000 0011）。また、あるビット列を左に1ビットシフトすると2倍、右に1ビットシフトすると1／2したのと同じになります（ビットあふれは無視します）。
+Yの0ビット目は1なので、Z←(0＋3) //Z＝3
+Xを1ビット左シフト //X＝6
+Yを1ビット右シフト //Y＝1
+i←(1＋1) //i＝2
+Yの第0ビットは1なので、Z←(3＋6) //Z＝9
+Xを1ビット左シフト //X＝12
+Yを1ビット右シフト //Y＝0
+以後、Yの第0ビットはi>16になるまで0なので、加算は行われずにループ終了
+Zを出力する //Z＝9
+Yの第0ビットは1なので、Z←(0＋3) //Z＝3
+Xを1ビット右シフト //X＝1
+Yを1ビット左シフト //Y＝6
+i←(1＋1) //i＝2
+Yを左にシフトすると第0ビットに0が挿入される。以後、Yの第0ビットはi>16になるまで常に0なので、加算は行われずにループ終了
+Zを出力する //Z＝3
+Yの第15ビットは0なので加算はなし
+Xを1ビット左シフト //X＝6
+Yを1ビット右シフト //Y＝1
+i←(1＋1) //i＝2
+Yを右にシフトすると第15ビットには0が挿入される。以後、Yの第15ビットはi>16になるまで常に0なので、加算は行われずにループ終了
+Zを出力する //Z＝0
+Yの第15ビットは0なので加算はなし
+Xを1ビット右シフト //X＝1
+Yを1ビット左シフト //Y＝6
+i←(1＋1) //i＝2
+Yの第15ビットは0なので加算はなし
+Xを1ビット右シフト //X＝0
+Yを1ビット左シフト //Y＝12
+Xが0になったので、加算処理が行われたとしてもZは0のままでループ終了
+Zを出力する //Z＝0
+唯一"3×3"の正しい結果である"9"を出力する「ア」の組合せが適切とわかります。
+
+このアルゴリズムを一言で言うならば、Yの第nビットが1であれば、ZにX×2^nを加算する処理を繰り返すものということになります。
+
+おまけとしてこのアルゴリズムをJavaScriptで実装したソースプログラムを掲載します。実行環境で数値やシフト部分を変えてお試しください。
+
+``` js
+var x=10, y=20, z=0, i=1;
+while(true) {
+    document.write('i='+i+'( ');
+    //yの0ビット目が1かを確認
+    if ((y & 1) > 0) {
+        z = z + x;
+    }
+    document.write('y[0]='+(y & 1)+', z='+z);  
+    x = x << 1; //xを1ビット左シフト
+    y = y >> 1; //yを1ビット右シフト
+    i = i + 1;
+    document.write(', x='+x+', y='+y+' )<br>');
+    if (i > 16) {
+        break;
+    }
+}
+document.write('<b>出力Z='+z+'</b>');
+```
+
+乗数は掛ける数。
+被乗数は掛けられる数。
+2 × 3なら 2が掛けられる数で3が掛ける数。
+小学校で習う概念だぞ。
+
+---
+
 ## 1回目に間違えた問題
 
 平成31年春期　問5
@@ -308,3 +377,49 @@ Perlの実行に関する記述のうち，適切なものはどれか。
 なので、「実行にWebサーバを必要とする言語であり，CGIの開発に適している。」を選んだが、デスクトップアプリケーションも作れるみたいですね。
 それは知らん。
 インタプリタ型なので、コンパイルは必要ないところはあいまいだったので、覚えられてよかった。
+
+
+
+
+平成31年春期　問7【
+次の流れ図は，2数 A，B の最大公約数を求めるユークリッドの互除法を，引き算の繰返しによって計算するものである。Aが876，Bが204のとき，何回の比較で処理は終了するか。
+
+→
+何回の比較ってあるので、最後の12 = 12も勘定に含めましょうって感じ。
+問題自体は、トレースしていけば終わる。
+
+
+
+平成30年春期　問6
+リストを二つの1次元配列で実現する。配列要素 box[i] と next[i] の対がリストの一つの要素に対応し，box[i] に要素の値が入リ，next[i] に次の要素の番号が入る。配列が図の状態の場合，リストの3番目と4番目との間に値が H である要素を挿入したときの next[8] の値はどれか。ここで，next[0] がリストの先頭(1番目)の要素を指し，next[i] の値が0である要素はリストの最後を示し，next[i] の値が空白である要素はリストに連結されていない。
+
+→
+日本語読めないです。日本語難しい。
+定義を完全に理解しないと解けない。
+簡単そうに見えて、結局どういうことってなるばかりだ。
+とりあえず、next[0]から始まる。これが全て。
+
+next[0] = 1
+box[1] = A
+next[1] = 5
+box[5] = E
+next[5] = 3
+box[3] = C
+next[3] = 7
+box[7] =G
+next[7] = 2
+box[2] = B
+next[2] = 0
+
+A,E,C,Gと来て、3番目と4番目の間に入る、CとGの間にHが入るわけです。
+つまり3の次の4にHが入って5番目からいつも通りということ。
+
+box[5] = E
+next[5] = 8 ※前は3
+box[8] = H
+next[8] = 7
+box[7] = G
+next[7] = 2
+
+というわけで、7になります。
+パソコンで書いたほうがわかりやすいですね。
