--- a/BasicInformation/午後/令和元年秋期.md
+++ b/BasicInformation/午後/令和元年秋期.md
@@ -102,6 +102,24 @@ IPアドレス固定の場合もそうだろうか？
 
 というわけで、ポート固定の地点で静的NATです。  
 
+### NAT64/DNS64
+
+IPv6機器からIPv4機器にアクセスするための機能に関する問題で、普通のNetworkAddressTranslationとDomainNameSystemを拡張したNAT64とDNS64なるものが登場した。  
+単純に気になったので調べて見た次第。  
+64はIPv6とIPv4を相互に変換する技術のため、「64 (ろく・よん) 変換」を意味している見たい。
+基本的に、この2つの機器はIPv6側のネットワークに設置されるものらしい。
+
+<https://support.biglobe.ne.jp/ipv6/nat64.html>  
+ここが普通にわかりやすいかな。  
+
+DNS64は名前解決としてIPv6も返すようにしたもの。  
+NAT64はIPv6とIPv4をつなげるための中間機器。  
+端末→IPv6→IPv4→サーバー  
+サーバー→IPv4→IPv6→端末  
+
+単純にそれだけではある。  
+午後問題では、端末からサーバーへのアクセス時にどのようなIP変換が行われるのかを問いていた。
+
 ---
 
 ## ソフトウェア設計
