フラグ引数

--- a/Other/コーディング規約.md
+++ b/Other/コーディング規約.md
@@ -2,8 +2,42 @@
 
 ・関数には1つのことをさせる
 ・関数は小さく作る
-・フラグ引数は悪
 
+---
+
+## フラグ引数
+
+笹田さんに説明する時、なぜだめなのか？をうまく説明できなかったのでまとめ。  
+大切なのは以下の2つに感じた。  
+
+・関数は1つのことをすべきという原則を破ることになるから  
+→フラグによって処理を分岐するということはTとFの2つの場合の処理を内包することになる。
+・コードリーディング中に、フラグがどちらの状態か常に意識していなければならないから。  
+
+``` txt:クリーンコード、フラグ引数
+フラグ引数は汚い方法です。関数にbooleanを渡すのはよくない習慣です。
+これは、直ちにメソッドの※シグネチャをわかりにくくします。
+この関数は2つ以上のことをしています。フラグがTrueの時に1つ、そしてfalseの時にもう一つです。
+マウスカーソルを上に持ってくれば、引数の内容が表示されるのでいくらかは助けになりますが、十分とは言えません。
+2つのメソッドに分離するべきなのです。
+
+※シグネチャー : プログラミングの世界では、メソッド名、パラメータの型、数、順序、戻り値の型等で構成された、メソッドを識別するための情報という意味があります  
+```
+
+[安易にフラグ変数を利用すべきでない３つの理由]<https://www.deep-rain.com/programming/program/747>  
+
+[コーディングのアンチパターンを自分なりにまとめてみた]<https://koduki.hatenablog.com/entry/2012/04/16/082356>  
+
+``` txt
+神のメソッド
+あらゆる処理が可能な神の如きメソッドを作るアンチパターンです。
+また、多くの場合、神は太っています。
+execとかrunとかmainという名前には要注意です。
+フラグで制御し始めたら危険信号。システムの構成上どうしても引数の内容で処理内容を選択したいときは、ハンドリングだけを対象メソッドにさせて具体的な処理は別なメソッドにしましょう。
+StrategyパターンとかCommandパターンとかが解決の糸口になることもあります。
+```
+
+---
 
 ## 引き数は不変
 
@@ -17,4 +51,3 @@
 ①2行に変更するとき漏れが生じる  
 ②returnを見落としがちになる。  
 ③条件が長いと後ろの文章が見えなくなる。  
-
