補数について補足

--- a/BasicInformation/午前/1.テクノロジ系/1.基礎理論.md
+++ b/BasicInformation/午前/1.テクノロジ系/1.基礎理論.md
@@ -724,6 +724,40 @@ p:指数
 
 8ビットの場合、2の補数表現を用いて表現できる範囲は「-128～127」です。
 ビット数を「n」とした時に「-2^(n-1)〜2^(n-1)-1」の範囲が表現できる。
+          符号なし 符号付き
+0000 0000 0 0
+0000 0001 1 1
+0000 0010 2 2
+0111 1111 127 127
+1000 0000 128 -128
+1000 0001 129 -127
+1111 1110 254 -2
+1111 1111 255 -1
+
+127をマイナスにする。
+0111 1111 : 127
+→ビット反転して1を足す
+1000 0001 : -127
+→１を引く
+1000 0000 : -128
+というわけで、-128まで表現可能。
+
+ちなみに128が本当に1000 0000についてだが、
+1000 0000 : 128
+→反転
+0111 1111
+→1を足す
+1000 0000 : -128
+
+128 + -128 = 0
+ 1000 0000
++1000 0000
+ 0000 0000
+というわけで、辻褄はあっている。
+
+先頭1ビットを符号と見立てる。0ならプラス。1ならマイナス。
+0111 1111 がプラスの最大表現となるので、127がプラスの最大値となる。
+先頭に1がついた場合の表現は上記表を参照。
 
 例：
 433-114 = 319
