--- a/BasicInformation/午前/1.テクノロジ系/1.基礎理論.md
+++ b/BasicInformation/午前/1.テクノロジ系/1.基礎理論.md
@@ -722,6 +722,14 @@ p:指数
 ①ビット反転させる
 ②1を足す
 
+例：
+433-114 = 319
+114の補数 = 886
+433+886=1,319
+
+最上位の桁を取り除けば加算でも減算と同様の結果が得られることが分かる。
+
+
 8ビットの場合、2の補数表現を用いて表現できる範囲は「-128～127」です。
 ビット数を「n」とした時に「-2^(n-1)〜2^(n-1)-1」の範囲が表現できる。
           符号なし 符号付き
@@ -759,12 +767,16 @@ p:指数
 0111 1111 がプラスの最大表現となるので、127がプラスの最大値となる。
 先頭に1がついた場合の表現は上記表を参照。
 
-例：
-433-114 = 319
-114の補数 = 886
-433+886=1,319
 
-最上位の桁を取り除けば加算でも減算と同様の結果が得られることが分かる。
+補数表現の他に絶対値表現なるものがある。
+先頭の0をプラス、1ならマイナスは補数と同じだが、その下の数をそのまま使う方式。
+
+8ビット 27と-27の表記は以下のようになる。
+0001 1011 : 27
+1001 1011 : -27
+
+ただ、こちらの方式は見た目のためにあるだけで、あまり使われない模様。
+実際に計算させると意味が違うし、あくまでそういう表現もできるよねって物だけなのかもしれない。
 
 
 #### 減基数の補数
