--- a/BasicInformation/午前/1.テクノロジ系/1.基礎理論.md
+++ b/BasicInformation/午前/1.テクノロジ系/1.基礎理論.md
@@ -703,13 +703,32 @@ p:指数
 1.常用対数の値の、整数部分を除いた小数部分の値。
 2.浮動小数点数における、基数および指数を除いた数値。「1.25×10^－4」の場合、基数「10」、指数「－4」を除いた「1.25」を仮数という。
 
+<https://mathwords.net/kasuubu>  
+ある数を、A×B^C という形で表現したとき、A を仮数部、B を基数、C を指数部と言う。
+
 例えば、128 という数は、1.28×10^2 という形で表現することができます。
 このように、A×B^C という形（ただし、A は 1 以上、B 以下）で表現された数を浮動小数点数と言います。
 1.28 が仮数部、10 が基数、2 が指数部になります。
 また、128 という数は、1×2^7 というように表現することもできます。この表現に対しては、1 が仮数部、2 が基数、7 が指数部になります。
 
+練習問題
+20.25 を（基数が 2 の）浮動小数点数として表現せよ。
+
+解答
+STEP1 20.25 を二進数で表す：
+20.25=16+4+14=2^4+2^2+2^−2 なので，
+20.25 を二進法で表現すると、10100.01 となります。
+
+STEP2 仮数部の頭が 1 になるようにシフトする
+二進法で 10100.01 という数は、1.010001×2^4 と表現することができます（4桁シフトしました）。
+よって、答えは1.010001×2^4です。仮数部が 1.010001 で、指数部が 4 です。
+
+
+これだけではなく、浮動小数点の構成の中でも色々あるみたいなのでまとめる。
 
 ### 浮動小数点
+
+<https://www.macnica.co.jp/business/semiconductor/articles/intel/133327/>
 
 
 ### 補数
