--- a/BasicInformation/午前/1.テクノロジ系/9.データベース.md
+++ b/BasicInformation/午前/1.テクノロジ系/9.データベース.md
@@ -555,6 +555,28 @@ XMLやJSONなどの構造でデータを格納する
 
 ---
 
+## コラム
+
+### 外部キー制約(FOREIGN KEY)
+外部キー制約とは、リレーショナルデータベース（RDB）でテーブルにデータを追加・更新する際の制約の一つで、外部の他のテーブルの特定の列の値しか指定できないようにするもの。  
+萬君の質問にまたしても答えられなかったので、改めて復習。
+よく見てみると、対して深くまとめているわけではなさそうですね。
+
+<https://www.dbonline.jp/mysql/table/index11.html>
+簡単に言えば、銀行台帳にコード1，2ってあるけど、銀行支店に銀行コード3を追加しようとしたらエラーになるって制約の事みたいです。
+後、銀行支店台帳で銀行コード1を使っているのに銀行台帳の銀行コード1を削除しようとした場合もエラーになし、更新しようとしたら子テーブルも更新されたりするみたい。
+というわけで、外部キー制約を設けると、親テーブルと子テーブルの間で値の整合性が保たれるというわけ。
+
+<https://qiita.com/SLEAZOIDS/items/d6fb9c2d131c3fdd1387>
+ここもしっくり来ること言ってるな。
+「他のテーブルのデータに参照(依存)するようにカラムに付ける制約」
+
+詳しくはこの記事読んで欲しいけど、何でもかんでも外部キーを貼らないほうがいいのかも。
+時と場合によることがよくわかる。
+というか、ちゃんと設計出来ていれば問題はないはずなんだけどね。
+
+---
+
 ## 1回目に間違えた問題
 
 DBMSが，3層スキーマアーキテクチャを採用する目的として，適切なものはどれか。
