--- a/C#/非同期系メモ.md
+++ b/C#/非同期系メモ.md
@@ -181,13 +181,50 @@ private async void Initialize()
 
 ---
 
-## async await 並列 c#
+## 非同期メソッドの並列実行
 
 <https://docs.microsoft.com/ja-jp/dotnet/csharp/programming-guide/concepts/async/>  
 
 RN3で非同期メソッドを並列処理できそうな箇所があったので、
-ECOでやったような,Task.WaitAllみたいな並列処理をAsyncActionでも実現できないか調べてみた。  
+ECOでやったような,Task.WaitAllみたいな並列処理をAsyncAwaitでも実現できないか調べてみた。  
 天下のマイクロソフトに完璧なサンプルがあったのでそれを拝借する。  
-因みに実現できたっぽいのだが、そうしたら非同期中のクルクルがなくなってしまったのでやめた。  
+因みに実現できたのだが、そうしたら非同期中のクルクルがなくなってしまったのでやめた。  
 
+``` C#
+static async Task Sample1()
+{
+    var eggsTask = Task.Run(async () =>
+    {
+        Console.WriteLine("すごく重い処理その1(´・ω・`)始まり");
+        await Task.Delay(3000);
+        Console.WriteLine("すごく重い処理その1(´・ω・`)終わり");
+    });
+    var baconTask = Task.Run(async () =>
+    {
+        Console.WriteLine("すごく重い処理その2(´・ω・`)始まり");
+        await Task.Delay(5000);
+        Console.WriteLine("すごく重い処理その2(´・ω・`)終わり");
+    });
+    // 普通にTask.WhenAllに各非同期メソッドを登録すればいいみたい。
+    await Task.WhenAll(eggsTask, baconTask);
+    Console.WriteLine("終わり");
 
+    // Listに入れて引き回す事もできる。
+    // 処理を並列に実行しつつ、各処理固有の終了処理を記述したい時はこっちかもね。
+    var breakfastTasks = new List<Task> { eggsTask, baconTask };
+    while (breakfastTasks.Count > 0)
+    {
+        Task finishedTask = await Task.WhenAny(breakfastTasks);
+        if (finishedTask == eggsTask)
+        {
+            Console.WriteLine("eggs are ready");
+        }
+        else if (finishedTask == baconTask)
+        {
+            Console.WriteLine("bacon is ready");
+        }
+        breakfastTasks.Remove(finishedTask);
+    }
+    Console.WriteLine("終わり");
+}
+```
