--- a/BasicInformation/午前/1.テクノロジ系/1.基礎理論.md
+++ b/BasicInformation/午前/1.テクノロジ系/1.基礎理論.md
@@ -730,8 +730,60 @@ STEP2 仮数部の頭が 1 になるようにシフトする
 
 <https://www.macnica.co.jp/business/semiconductor/articles/intel/133327/>
 
+浮動小数点とは、小数点の位置を固定せずに表現された数です。  
+やってみればわかるけど、小数点の位置を自由に移動させられるので浮動というわけだ。
+ふどう
+【浮動】
+《名・ス自》浮きただようように、定まらずに揺れ動くこと。
+固定しないであちこちと移動すること。
+
+参考のためにC#の浮動小数点型を記載しておく。
+
+float   :  4バイト( 32ビット) ±1.5 x 10^−45 から ±3.4 x 10^38 6～9 桁  符号部に1ビット、仮数部に23ビット、指数部に8ビット
+double  :  8バイト( 64ビット) ±5.0 x 10^−324 - ±1.7 x 10^308           符号部に1ビット、仮数部に52ビット、指数部に11ビット
+decimal : 16バイト(128ビット) ±1.0 x 10^-28 から ±7.9228 x 10^28       符号部に1ビット、謎
+
+一番小さいfloat型で考えたほうがいい。
+基本として、符号部、指数部、仮数部で並ぶ。
+
+符号部(1ビット) 指数部(8ビット) 仮数部(23ビット)
+
+例題 : -10.25を浮動小数点で表現する。
+
+①10.25を2進数に変換する。
+
+10 = 1010
+0.25 = 1 / 4 = 1 / 2^2 = 0.01
+10.25 = 1010.01
+
+1010.01を左に3ビットシフトする。
+1.01001 * 2^3  
+
+で、なぜか知らないが、先頭の1.の部分は破棄するらしい。  
+01001
+
+この地点での浮動小数点は  
+1 _______ 0100 1000 0000 0000~~~
+
+
+②指数部を求める  
+左に3ビットシフトしたので、指数はもちろん3
+0000 0011
+
+それだけならいいのだが、指数部はオフセットバイナリ形式なので、バイアス値127との論理和となる模様。
+0000 0011
+0111 1111
+1000 0010
+
+1 1000 0010 0100 1000 ~~~~
+
+というわけで完成らしい。
+小数点を表さなければ単純に32ビット分の整数表示ができるのかなー。
+概要はわかったけど色々謎である。
+しかし、-10.25を変換できたわけだが、復元するときはこの逆をするってことか？メンド。
 
 ### 補数
+
 <https://agency-star.co.jp/column/2-complement/>
 元の数字に足すと次の桁上がりを起こす「最小」の数字のこと。
 例えば、10進数の7の補数は3、77の補数は23といった具合です。
@@ -804,6 +856,52 @@ STEP2 仮数部の頭が 1 になるようにシフトする
 
 1の補数ともいう。
 ビットを反転させるだけで1の補数になる。
+
+
+### 0.1を2進数で表す
+
+<https://detail.chiebukuro.yahoo.co.jp/qa/question_detail/q148448134>
+
+なんかしょっちゅう忘れる。  
+0.25は簡単。
+0.25 = 1 / 4 = 1 / 2^2 = 0.01
+
+しかしこの考えで0.1を作ろうとすると死ぬ。
+で、忘れたので調べた。
+整数部分は割り算で求めるなら、少数は掛け算で求めるのだった。
+
+小数部分が0になるまで繰り返す。
+0.1は無限小数なので、綺麗になることはないが、とりあえずそれで求められる。
+
+0.1
+0.2
+0.4
+0.8
+1.6
+1.2
+0.4
+0.8
+1.6
+1.2
+0.4
+0.8
+000011001100
+最上位が整数部なので小数点を差し込んで0.00011001100。
+
+0.25
+0.5
+1.0
+0.01
+
+因みに8進数だろうと16進数だろうとやることは変わらない。
+
+試しに10進数の0.8359375を8進数に変換する。
+0.8359375*8
+=6.6875*8
+=5.5*8
+=4.0
+
+というわけで、0.654。
 
 ---
 
