--- a/BasicInformation/午前/1.テクノロジ系/1.基礎理論.md
+++ b/BasicInformation/午前/1.テクノロジ系/1.基礎理論.md
@@ -782,6 +782,12 @@ decimal : 16バイト(128ビット) ±1.0 x 10^-28 から ±7.9228 x 10^28      
 概要はわかったけど色々謎である。
 しかし、-10.25を変換できたわけだが、復元するときはこの逆をするってことか？メンド。
 
+#### 浮動小数点の計算
+
+<https://dobon.net/vb/dotnet/beginner/floatingpointerror.html>
+
+要は、0.1は無限小数で絶対に誤差が生じるものだから、そんなものを足し合わせたら誤差が出て当たり前って事。
+
 ### 補数
 
 <https://agency-star.co.jp/column/2-complement/>
