--- a/Other/英単語とか.md
+++ b/Other/英単語とか.md
@@ -1,6 +1,13 @@
 # 英単語
 
 variable : 変数
+argument : 引数
+
+## LGTM
+
+ "Looks good to me" の略で「良さそうだ」「問題ないと思う」という意味。
+
+
 
 ●Delete,Erase,Remove,Eliminate
 
