こまごまとしたもの

--- a/Other/英単語とか.md
+++ b/Other/英単語とか.md
@@ -1,14 +1,25 @@
 # 英単語
 
-variable : 変数
-argument : 引数
+・variable : 変数
+・argument : 引数
 
-## LGTM
-
- "Looks good to me" の略で「良さそうだ」「問題ないと思う」という意味。
-
+・LGTM(Looks good to me)
+「良さそうだ」「問題ないと思う」という意味。
 
 ・federation : 連合、同盟
+
+・particular : 特に
+→
+なぜか知らんが、突然頭に浮かんだので意味を調べてみた。
+また1つ賢くなりました。
+
+・Consolidation : 統合,集約
+主に機器やソフトウェアについて使うらしい。
+サーバーコンソリデーションは応用でも出てきたやつ。
+他の特化サーバーを1台のサーバーにまとめるやつね。
+
+・Aggregation : 集約
+
 
 
 ●Delete,Erase,Remove,Eliminate
@@ -44,10 +55,4 @@ argument : 引数
 また、その場から取り去る（もの自体は存在する）場合にも使える動詞です。
 
 物やデータをどける的なニュアンスを感じる。
-
-
-●particular : 特に
-→
-なぜか知らんが、突然頭に浮かんだので意味を調べてみた。
-また1つ賢くなりました。
 
